# SICA-rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  memory.md  run.bat  run.ps1  rust-toolchain.toml  sica-settings.json  start.bat
.claude/: settings.local.json
crates/agents/: Cargo.toml
crates/agents/src/: agent.rs  builtins.rs  lib.rs  md_skill.rs  memory.rs  parse_tool_call.rs  registry.rs  skill.rs  skill_creator.rs  subagent.rs  turn.rs
crates/backend/: Cargo.toml
crates/backend/src/: chat.rs  dispatcher.rs  ipc.rs  main.rs  parent_watch.rs  sessions_store.rs  title_gen.rs
crates/backend/src/be_core/: counter.rs  fib.rs  mod.rs
crates/frontend/: Cargo.toml
crates/frontend/assets/fonts/: OFL.txt
crates/frontend/src/: app.rs  builder.rs  child.rs  icon.rs  ipc_client.rs  llm_providers.rs  main.rs  settings_store.rs  supervisor.rs  watcher.rs
crates/frontend/src/ui/: controls.rs  fonts.rs  log_panel.rs  mod.rs  sessions_panel.rs  sidebar.rs  status_bar.rs  widgets.rs
crates/frontend/src/ui/chat/: input_bar.rs  messages.rs  mod.rs  tool_chips.rs
crates/frontend/src/ui/settings/: communication.rs  general.rs  llm.rs  mod.rs
crates/idealist/: Cargo.toml
crates/idealist/src/: analyzer.rs  be_autofix.rs  classifier.rs  fe_ticket.rs  lib.rs  trigger_bus.rs
crates/llm/: Cargo.toml
crates/llm/src/: client.rs  lib.rs  state.rs  streaming.rs  tokenize.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/sica-core/: Cargo.toml
crates/sica-core/src/: build_id.rs  lib.rs  message.rs  paths.rs  session.rs  theme.rs
idealist_workspace/: Improvement-BE-tool_failed-20260516T200507Z.md  Improvement-BE-tool_failed-20260516T201102Z.md  Improvement-BE-tool_failed-20260516T201136Z.md  Improvement-BE-tool_failed-20260516T201214Z.md  Improvement-BE-tool_failed-20260516T201949Z.md
sessions/: 1.toml  10.toml  12.toml  13.toml  14.toml  15.toml  16.toml  18.toml  3.toml  5.toml  6.toml
skills/: playwright.md  powershell.md  read-file.md  run-cli.md  run-pwsh.md  skill-creator.md  write-file.md
