[workspace]
resolver = "2"
members  = [
    "crates/protocol",
    "crates/sica-core",
    "crates/llm",
    "crates/agents",
    "crates/idealist",
    "crates/backend",
    "crates/frontend",
]

[workspace.package]
edition      = "2021"
rust-version = "1.82"
version      = "0.1.0"
license      = "MIT OR Apache-2.0"
authors      = ["sica-rust"]

[workspace.dependencies]
serde                  = { version = "1", features = ["derive"] }
bincode                = "1.3"
serde_json             = "1"
tokio                  = { version = "1", features = ["full"] }
tokio-util             = { version = "0.7", features = ["codec"] }
bytes                  = "1"
anyhow                 = "1"
thiserror              = "1"
tracing                = "0.1"
tracing-subscriber     = { version = "0.3", features = ["env-filter", "fmt"] }
futures                = "0.3"
interprocess           = { version = "2", features = ["tokio"] }
parking_lot            = "0.12"
eframe                 = { version = "0.28", default-features = false, features = ["default_fonts", "glow"] }
egui                   = "0.28"
notify                 = "6"
notify-debouncer-mini  = "0.4"
reqwest                = { version = "0.12", default-features = false, features = ["json", "stream", "http2"] }
eventsource-stream     = "0.2"
crossbeam-channel      = "0.5"
url                    = "2"
chrono                 = { version = "0.4", features = ["serde"] }
once_cell              = "1"
regex                  = "1"
async-trait            = "0.1"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "symbols"
