[package]
name         = "backend"
edition      = { workspace = true }
version      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
protocol           = { path = "../protocol" }
serde              = { workspace = true }
bincode            = { workspace = true }
tokio              = { workspace = true }
tokio-util         = { workspace = true }
bytes              = { workspace = true }
interprocess       = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
futures            = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }
