[package]
name         = "frontend"
edition      = { workspace = true }
version      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
default-run  = "frontend"

[[bin]]
name = "frontend"
path = "src/main.rs"

[dependencies]
protocol              = { path = "../protocol" }
sica-core             = { path = "../sica-core" }
agents                = { path = "../agents" }
serde                 = { workspace = true }
serde_json            = { workspace = true }
toml                  = { workspace = true }
bincode               = { workspace = true }
tokio                 = { workspace = true }
tokio-util            = { workspace = true }
bytes                 = { workspace = true }
interprocess          = { workspace = true }
anyhow                = { workspace = true }
thiserror             = { workspace = true }
tracing               = { workspace = true }
tracing-subscriber    = { workspace = true }
futures               = { workspace = true }
parking_lot           = { workspace = true }
eframe                = { workspace = true }
egui                  = { workspace = true }
egui_commonmark       = { workspace = true }
notify                = { workspace = true }
notify-debouncer-mini = { workspace = true }
