[package]
name         = "idealist"
edition      = { workspace = true }
version      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }

[dependencies]
protocol          = { path = "../protocol" }
sica-core         = { path = "../sica-core" }
serde             = { workspace = true }
serde_json        = { workspace = true }
anyhow            = { workspace = true }
tokio             = { workspace = true }
tracing           = { workspace = true }
crossbeam-channel = { workspace = true }
chrono            = { workspace = true }
