[package]
name         = "sica-core"
edition      = { workspace = true }
version      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }

[dependencies]
protocol   = { path = "../protocol" }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
chrono     = { workspace = true }
